--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="#">News</a>
                               </li> -->
-                              <li class="nav-item">
+                              <!-- <li class="nav-item">
                                  <a class="nav-link" href="#">Privacy Policy</a>
                               </li>
                               <li class="nav-item d_none le_co">
                                  <a class="nav-link" href="#"><i class="fa fa-user" aria-hidden="true"></i>Register</a>
-                              </li>
+                              </li> -->
                               <!-- <li class="nav-item d_none le_co">
                                  <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li> -->
