--- a/index.html
+++ b/index.html
@@ -27,17 +27,14 @@
    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css"
       media="screen">
-   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 <!-- body -->
 
 <body class="main-layout">
    <!-- loader  -->
-   <div class="loader_bg">
+   <!-- <div class="loader_bg">
       <div class="loader"><img src="images/loading.gif" alt="#" /></div>
-   </div>
+   </div> -->
    <!-- end loader -->
    <!-- header -->
    <header>
@@ -231,7 +228,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2> <span class="yellow">Services</span><br>consectetur adipiscing elit</h2>
+                  <h2>Features</h2>
                </div>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -304,13 +301,13 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2>A MOST POWERFUL SURVEY SYSTEM.
+                  <h2>The most fun and easy to use surveys.
                   </h2>
                </div>
             </div>
             <div class="col-md-8 offset-md-2">
                <div class="wallet_main">
-                  <figure><img src="images/wallet.jpg" alt="#" /></figure>
+                  <!-- <figure><img src="images/survey.png" alt="#" /></figure> -->
                   <a class="read_more" href="https://panel.bunnysurveys.com">Get Started</a>
                </div>
             </div>
@@ -367,7 +364,7 @@
                      <div class="row">
                         <div class="col-md-10 offset-md-1">
                            <div class="test_box">
-                              <i><img src="images/test.png"></i>
+                              <i><img src="images/4.jpg"></i>
                               <h3>Jane M.</h3>
                               <p>
                                  "Bunny Surveys is a fantastic platform! The surveys are quick and fun to complete, and
@@ -385,7 +382,7 @@
                      <div class="row">
                         <div class="col-md-10 offset-md-1">
                            <div class="test_box">
-                              <i><img src="images/test.png"></i>
+                              <i><img src="images/5.jpg"></i>
                               <h3>David L.</h3>
                               <p>"I love using Bunny Surveys during my downtime. The interface is user-friendly, and I
                                  appreciate the variety of topics covered in the surveys. It's a great way to earn extra
@@ -402,7 +399,7 @@
                      <div class="row">
                         <div class="col-md-10 offset-md-1">
                            <div class="test_box">
-                              <i><img src="images/test.png"></i>
+                              <i><img src="images/3.jpg"></i>
                               <h3>Susan K.</h3>
                               <p>
                                  "Bunny Surveys has been a game-changer for me. The rewards are generous, and the
@@ -421,7 +418,7 @@
                      <div class="row">
                         <div class="col-md-10 offset-md-1">
                            <div class="test_box">
-                              <i><img src="images/test.png"></i>
+                              <i><img src="images/6.png"></i>
                               <h3>Mark R.</h3>
                               <p>
                                  "I've tried many survey sites, but Bunny Surveys stands out. The surveys are
@@ -439,8 +436,8 @@
                      <div class="row">
                         <div class="col-md-10 offset-md-1">
                            <div class="test_box">
-                              <i><img src="images/test.png"></i>
-                              <h3>Emily T.</h3>
+                              <i><img src="images/1.png"></i>
+                              <h3>Joshua T.</h3>
                               <p>
                                  "Bunny Surveys is my go-to for earning rewards. The surveys are enjoyable, and I love
                                  getting gift cards for my favorite stores. It's a win-win!"
@@ -451,7 +448,7 @@
                   </div>
                </div>
             </div>
-            <div class="carousel-item">
+            <!-- <div class="carousel-item">
                <div class="container">
                   <div class="carousel-caption">
                      <div class="row">
@@ -467,7 +464,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div> -->
             <div class="carousel-item">
                <div class="container">
                   <div class="carousel-caption">
@@ -502,14 +499,20 @@
                   </div>
                </div>
             </div>
+            <div class="col-md-8 offset-md-2"></div>
+            <div class="wallet_main">
+               <!-- <figure><img src="images/survey.png" alt="#" /></figure> -->
+               <a class="read_more" href="https://panel.bunnysurveys.com">Try Out Now</a>
+            </div>
          </div>
-         <a class="carousel-control-prev" href="#testimoni" role="button" data-slide="prev">
-            <i class="fa fa-chevron-left" aria-hidden="true"></i>
-         </a>
-         <a class="carousel-control-next" href="#testimoni" role="button" data-slide="next">
-            <i class="fa fa-chevron-right" aria-hidden="true"></i>
-         </a>
       </div>
+      <a class="carousel-control-prev" href="#testimoni" role="button" data-slide="prev">
+         <i class="fa fa-chevron-left" aria-hidden="true"></i>
+      </a>
+      <a class="carousel-control-next" href="#testimoni" role="button" data-slide="next">
+         <i class="fa fa-chevron-right" aria-hidden="true"></i>
+      </a>
+   </div>
    </div>
    <!-- end testimonial section -->
    <!-- comments  section -->
@@ -518,7 +521,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2> <span class="yellow">Contact Us</span><br> Reqesute a call back</h2>
+                  <h2> Contact Us</h2>
                </div>
             </div>
          </div>
@@ -608,7 +611,8 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-10">
-                     <p>Copyright 2019 All Right Reserved By<a href="https://panel.bunnysurveys.com">Bunny Surveys</a></p>
+                     <p>Copyright 2019 All Right Reserved By<a href="https://panel.bunnysurveys.com">Bunny Surveys</a>
+                     </p>
                   </div>
                </div>
             </div>
