--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
          <div class="row d_flex">
             <div class="col-md-12 col-lg-5">
                <div class="about_img">
-                  <figure><img src="images/about.png" alt="#" /></figure>
+                  <figure><img src="images/survey.png" alt="#" /></figure>
                </div>
             </div>
             <div class="col-md-12 col-lg-7">
