--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
                               <li class="nav-item">
                                  <a class="nav-link" href="#">News</a>
                               </li> -->
-                              <!-- <li class="nav-item">
-                                 <a class="nav-link" href="#">Privacy Policy</a>
-                              </li>
-                              <li class="nav-item d_none le_co">
+                              <!-- <li class="nav-item d_none le_co">
                                  <a class="nav-link" href="#"><i class="fa fa-user" aria-hidden="true"></i>Register</a>
                               </li> -->
                               <!-- <li class="nav-item d_none le_co">
@@ -612,6 +609,9 @@
                <div class="row">
                   <div class="col-md-10">
                      <p>Copyright 2019 All Right Reserved By<a href="https://panel.bunnysurveys.com">Bunny Surveys</a>
+                        <li class="nav-item">
+                           <a class="nav-link" href="./privacy_policy.html">Privacy Policy</a>
+                        </li>
                      </p>
                   </div>
                </div>
