--- a/index.html
+++ b/index.html
@@ -609,10 +609,10 @@
                <div class="row">
                   <div class="col-md-10">
                      <p>Copyright 2019 All Right Reserved By<a href="https://panel.bunnysurveys.com">Bunny Surveys</a>
-                        <li class="nav-item">
-                           <a class="nav-link" href="./privacy_policy.html">Privacy Policy</a>
-                        </li>
                      </p>
+                     <li class="nav-item">
+                        <a href="./privacy_policy.html">Privacy Policy</a>
+                     </li>
                   </div>
                </div>
             </div>
